[project]
name = "infra_lib"
version = "0.0.2"
description = "Python library for Infrastructure-as-Code orchestration"
authors = [
    { name="Franco N. Merenda", email="merenda.franco83@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.33",
    "boto3-stubs[apigateway,cloudformation,ecr,iam,kinesis,lambda,s3,schemas,secretsmanager,signer,sqs,stepfunctions,sts,xray]>=1.39.7",
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "json5>=0.12.1",
    "pylint>=3.3.8",
    "python-dotenv>=1.1.1",
]

[project.scripts]
infra-cli = "infra_lib.cli:infra_cli"

[tool.setuptools.package-data]
"infra_lib.cli.template_cli.templates_handler" = ["templates/**/*", "templates/**/*.env.j2", "templates/**/.*"]




[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

